--- a/README.html
+++ b/README.html
@@ -2,10 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Structures and Algorithms Project</title>
 </head>
 <body>
+<h1>Data Structures and Algorithms Project</h1>
+<p>This project contains implementations of common data structures such as linked lists, stacks, queues, trees, etc., as well as basic sorting and searching algorithms.</p>
 
+<h2>Table of Contents</h2>
+<ul>
+    <li><a href="#installation">Installation</a></li>
+    <li><a href="#usage">Usage</a></li>
+    <li><a href="#contributing">Contributing</a></li>
+    <li><a href="#license">License</a></li>
+</ul>
 
+<h2 id="installation">Installation</h2>
+<p>To run this project, you will need a Python environment. After cloning the repository, you can install the dependencies with the following command:</p>
+<pre><code>pip install -r requirements.txt</code></pre>
+
+<h2 id="usage">Usage</h2>
+<ol>
+    <li>Clone the repository:
+        <pre><code>git clone https://github.com/yourusername/data-structures-algorithms.git</code></pre>
+    </li>
+    <li>Navigate to the project directory:
+        <pre><code>cd data-structures-algorithms</code></pre>
+    </li>
+    <li>Run tests:
+        <pre><code>python test_script.py</code></pre>
+    </li>
+</ol>
+
+<h2 id="contributing">Contributing</h2>
+<p>Contributions are welcome! Please ensure that you follow the project's coding style and submission guidelines.</p>
+
+<h2 id="license">License</h2>
+<p>This project is licensed under the MIT License. See the <a href="LICENSE">LICENSE</a> file for details.</p>
 </body>
 </html>
